--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,7 +29,7 @@
                     android:layout_height="200dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
-                    android:src="@mipmap/ic_launcher" />
+                    app:srcCompat="@mipmap/ic_launcher" />
 
             <TextView
                     android:layout_width="wrap_content"
@@ -145,7 +146,7 @@
                     android:layout_height="@dimen/edited_image_size"
                     android:layout_gravity="center_horizontal"
                     android:scaleType="center"
-                    android:src="@mipmap/ic_launcher"
+                    app:srcCompat="@mipmap/ic_launcher"
                     android:visibility="gone" />
 
         </LinearLayout>
