--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,7 +18,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
-                android:text="@string/app_desc"
+                android:text="@string/app_info"
                 android:textColor="@color/colorPrimary"
                 android:textSize="44dp"
                 android:textStyle="bold" />
@@ -28,7 +29,7 @@
                 android:layout_height="400dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="100dp"
-                android:src="@mipmap/ic_launcher_round" />
+                app:srcCompat="@mipmap/ic_launcher_round" />
 
     </RelativeLayout>
 
