--- a/app/src/main/res/layout/image_layout.xml
+++ b/app/src/main/res/layout/image_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/pictureLayout"
               android:layout_marginTop="200dp">
@@ -11,6 +12,6 @@
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:background="@color/colorPrimary"
-            android:src="@mipmap/ic_launcher"/>
+            app:srcCompat="@mipmap/ic_launcher"/>
 
 </LinearLayout>
