--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -13,10 +13,7 @@
             android:id="@+id/content_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin">
+            android:padding="@dimen/activity_margin">
 
         <ScrollView
                 android:layout_width="match_parent"
@@ -33,12 +30,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_margin="4dp"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginLeft="4dp"
-                        android:layout_marginTop="0dp"
-                        android:layout_marginEnd="4dp"
-                        android:layout_marginRight="4dp"
+                        android:layout_margin="@dimen/inner_margin"
                         android:background="@color/colorPrimary"
                         android:gravity="center"
                         android:paddingTop="12dp"
@@ -57,6 +49,7 @@
                         android:layout_width="@dimen/edited_image_size"
                         android:layout_height="@dimen/edited_image_size"
                         android:layout_gravity="center_horizontal"
+                        android:layout_margin="@dimen/inner_margin"
                         android:visibility="gone"
                         app:srcCompat="@mipmap/ic_launcher" />
 
@@ -65,6 +58,7 @@
                         android:layout_width="@dimen/edited_image_size"
                         android:layout_height="@dimen/edited_image_size"
                         android:layout_gravity="center_horizontal"
+                        android:layout_margin="@dimen/inner_margin"
                         app:srcCompat="@mipmap/ic_launcher" />
 
                 <GridView
