--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -15,55 +15,63 @@
             android:layout_height="match_parent"
             android:padding="@dimen/activity_margin">
 
-        <LinearLayout
+        <ScrollView
+                android:id="@+id/imageScreenScroll"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
 
-            <Button
-                    android:id="@+id/buttonShare"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="@dimen/inner_margin"
-                    android:background="@color/colorPrimary"
-                    android:gravity="center"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="12dp"
-                    android:text="@string/share"
-                    android:textColor="@color/colorWhite" />
-
-            <ImageView
-                    android:id="@+id/imageNew"
-                    android:layout_width="@dimen/edited_image_size"
-                    android:layout_height="@dimen/edited_image_size"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="@dimen/inner_margin"
-                    android:background="@color/colorPrimary"
-                    android:visibility="gone"
-                    app:srcCompat="@mipmap/ic_launcher" />
-
-            <ImageView
-                    android:id="@+id/imageOriginal"
-                    android:layout_width="@dimen/edited_image_size"
-                    android:layout_height="@dimen/edited_image_size"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="@dimen/inner_margin"
-                    android:background="@color/colorPrimary"
-                    app:srcCompat="@mipmap/ic_launcher" />
-
-            <GridView
-                    android:id="@+id/frames"
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:columnWidth="110dp"
-                    android:gravity="center"
-                    android:horizontalSpacing="5dp"
-                    android:numColumns="auto_fit"
-                    android:stretchMode="spacingWidthUniform"
-                    android:verticalSpacing="20dp" />
+                    android:orientation="vertical">
 
-        </LinearLayout>
+                <Button
+                        android:id="@+id/buttonShare"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="@dimen/inner_margin"
+                        android:background="@color/colorPrimary"
+                        android:gravity="center"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="12dp"
+                        android:text="@string/share"
+                        android:textColor="@color/colorWhite" />
+
+                <ImageView
+                        android:id="@+id/imageNew"
+                        android:layout_width="@dimen/edited_image_size"
+                        android:layout_height="@dimen/edited_image_size"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="@dimen/inner_margin"
+                        android:background="@color/colorPrimary"
+                        android:visibility="gone"
+                        app:srcCompat="@mipmap/ic_launcher" />
+
+                <ImageView
+                        android:id="@+id/imageOriginal"
+                        android:layout_width="@dimen/edited_image_size"
+                        android:layout_height="@dimen/edited_image_size"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="@dimen/inner_margin"
+                        android:background="@color/colorPrimary"
+                        app:srcCompat="@mipmap/ic_launcher" />
+
+                <blog.photo.bildalbum.utils.ExpandableHeightGridView
+                        android:id="@+id/frames"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:columnWidth="110dp"
+                        android:gravity="center"
+                        android:horizontalSpacing="5dp"
+                        android:isScrollContainer="false"
+                        android:numColumns="auto_fit"
+                        android:stretchMode="spacingWidthUniform"
+                        android:verticalSpacing="20dp" />
+
+            </LinearLayout>
+
+        </ScrollView>
 
     </RelativeLayout>
 
