--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,7 @@
             android:orientation="vertical">
 
         <Button
-                android:id="@+id/buttonTakePicture"
+                android:id="@+id/buttonTakePhoto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -24,7 +24,7 @@
                 android:gravity="center"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
-                android:text="@string/take_picture"
+                android:text="@string/take_photo"
                 android:textColor="@color/colorWhite" />
 
         <GridView
