--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -39,7 +39,7 @@
                 android:verticalSpacing="20dp" />
 
         <ImageView
-                android:id="@+id/imageViewImage"
+                android:id="@+id/imageView"
                 android:layout_width="@dimen/edited_image_size"
                 android:layout_height="@dimen/edited_image_size"
                 android:layout_gravity="center_horizontal"
