--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,19 @@
     </style>
 
     <style name="BuildAlbumActionBar" parent="Widget.AppCompat.ActionBar.Solid">
-        <item name="background">@color/colorPrimary</item>
+        <!-- Used for the background -->
+        <item name="android:background">@color/colorPrimary</item>
+        <!-- Used for the title -->
         <item name="android:textColor">@color/colorWhite</item>
+    </style>
+
+    <style name="BuildAlbumAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Used for the background -->
+        <item name="android:background">@color/colorPrimary</item>
+        <!-- Used for the title -->
+        <item name="android:textColor">@color/colorWhite</item>
+        <!-- Used for the items -->
+        <item name="textColorAlertDialogListItem">@color/colorWhite</item>
     </style>
 
 </resources>
