--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_margin">0dp</dimen>
     <dimen name="inner_margin">4dp</dimen>
+    <!-- Default ImageView size -->
     <dimen name="edited_image_size">400dp</dimen>
 </resources>
