--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
@@ -23,6 +24,16 @@
             android:numColumns="auto_fit"
             android:stretchMode="spacingWidthUniform"
             android:verticalSpacing="20dp" />
+
+        <ImageView
+            android:id="@+id/imageViewCamera"
+            android:layout_width="@dimen/edited_image_size"
+            android:layout_height="@dimen/edited_image_size"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="@dimen/inner_margin"
+            android:background="@color/colorPrimary"
+            android:visibility="gone"
+            app:srcCompat="@mipmap/ic_launcher" />
 
     </LinearLayout>
 
