--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -40,17 +40,15 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="@dimen/inner_margin"
                     android:background="@color/colorPrimary"
-                    android:visibility="gone"
                     app:srcCompat="@mipmap/ic_launcher" />
 
-                <ImageView
-                    android:id="@+id/imageViewImageOriginal"
-                    android:layout_width="@dimen/edited_image_size"
-                    android:layout_height="@dimen/edited_image_size"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="@dimen/inner_margin"
-                    android:background="@color/colorPrimary"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                <ImageButton
+                    android:id="@+id/buttonRotate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    app:srcCompat="@android:drawable/ic_menu_rotate" />
 
                 <blog.photo.buildalbum.utils.ExpandableHeightGridView
                     android:id="@+id/gridViewFrames"
