--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -26,7 +26,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageViewCamera"
+                    android:id="@+id/imageView"
                     android:layout_width="@dimen/edited_image_size"
                     android:layout_height="@dimen/edited_image_size"
                     android:layout_gravity="center_horizontal"
