--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,6 +18,7 @@
             android:id="@+id/girdViewImages"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="@dimen/inner_margin"
             android:columnWidth="110dp"
             android:gravity="center"
             android:horizontalSpacing="5dp"
